crates/compiler/src/tests/e2e/good/0115_trait_printable_impl/main.gom
trait Printable {
    fn print(Self);
}

impl Printable for int32 {
    fn print(self: int32) {
        println(int32_to_string(self));
    }
}

impl Printable for string {
    fn print(self: string) {
        println(self);
    }
}

fn print_twice[T: Printable](x: T) {
    Printable::print(x);
    Printable::print(x);
}

fn main() {
    print_twice(42);
    print_twice("hello");
}
